--- a/план_курса.html
+++ b/план_курса.html
@@ -187,7 +187,7 @@ $(document).ready(function () {
 <h1 class="title toc-ignore">Компьютерная математика</h1>
 <h3 class="subtitle"><em>Описание и программа курса</em></h3>
 <h4 class="author"><em>Храмов Д.А.</em></h4>
-<h4 class="date"><em>10.02.2019</em></h4>
+<h4 class="date"><em>16.02.2019</em></h4>
 
 </div>
 
@@ -197,10 +197,10 @@ $(document).ready(function () {
 <li><a href="#.--">2. Массивы. Логическая индексация</a></li>
 <li><a href="#--.--">3. Управление вычислительным процессом. Двумерная графика</a></li>
 <li><a href="#.-">4. Функции. Ввод/вывод</a></li>
-<li><a href="#-">5. Векторные преобразования</a></li>
-<li><a href="#-.--.----">6. Погрешности расчетов. Решение уравнений. Численное интегрирование и дифференцирование</a></li>
-<li><a href="#-">7. Символьные расчеты</a></li>
-<li><a href="#-.--">8. Трехмерная графика. Графические объекты</a></li>
+<li><a href="#-.--">5. Векторная алгебра. Трехмерная графика</a></li>
+<li><a href="#--.--">6. Особенности компьютерной арифметики. Символьные расчеты</a></li>
+<li><a href="#-">7. Решение уравнений</a></li>
+<li><a href="#-.-----">8. Графические объекты. Работа с изображениями и видео</a></li>
 <li><a href="#-">9. Эффективное программирование</a></li>
 <li><a>Литература</a></li>
 </ul>
@@ -234,22 +234,25 @@ $(document).ready(function () {
 <p>Фрагменты скриптов. Функции. Передача параметров: формальные и фактические параметры. Отладка функций. Локальные и глобальные переменные. Подфункции (субфункции). Объединение набора скалярных параметров в массив. Анонимные функции (однострочники). Проверка аргументов функций.</p>
 <p>Ввод данных с клавиатуры и из графического окна. Ввод/вывод данных в текстовые файлы. Форматированный ввод/вывод. Массив строк. Операции над файлами. Сохранение/загрузка рабочей среды (save, load).</p>
 </div>
-<div id="-" class="section level2">
-<h2>5. Векторные преобразования</h2>
-<p>Матричное умножение и его геометрический смысл. Линейная алгебра. Матричное умножение. Преобразование координат на плоскости. Системы линейных уравнений.</p>
-</div>
-<div id="-.--.----" class="section level2">
-<h2>6. Погрешности расчетов. Решение уравнений. Численное интегрирование и дифференцирование</h2>
-</div>
-<div id="-" class="section level2">
-<h2>7. Символьные расчеты</h2>
-<p>Символьный тип данных и символьные расчеты. Символьные расчеты. Математический Анализ. Преобразование выражений</p>
-</div>
 <div id="-.--" class="section level2">
-<h2>8. Трехмерная графика. Графические объекты</h2>
-<p>Построение кривых в пространстве. Построение сетки. Построение поверхностей функциями surf и mesh. «Лёгкие» графические функции. Захват видео.</p>
-<p>Иерархия типов данных. Иерархия графических объектов. Динамическое построение графиков.</p>
-<p>Множества Жюлиа и Мандельброта.</p>
+<h2>5. Векторная алгебра. Трехмерная графика</h2>
+<p>Вектор. Система координат. Норма вектора. Скалярное и векторное произведения. Координаты вектора в разных системах координат. Перенос. Связь новых координат со старыми. Поворот. Формулы для пересчета старых координат в новые. Матрица преобразования координат. Масштабирование. Отражение. Последовательные преобразования. Однородные координаты. Некоммутативность умножения матриц. Обратное преобразование.</p>
+<p>Трехмерная графика. Построение графиков кривых и точек в пространстве. Поверхность в трехмерном пространстве. Как задать область определения: meshgrid. Построение графиков функций двух переменных: mesh, surf. Вспомогательные графические функции</p>
+</div>
+<div id="--.--" class="section level2">
+<h2>6. Особенности компьютерной арифметики. Символьные расчеты</h2>
+<p>Символьный тип данных и символьные расчеты. Символьные расчеты. Математический Анализ: пределы, производные, интегралы, суммирование рядов и др. Преобразование выражений.</p>
+<p>Численное интегрирование и дифференцирование - если функции типа int допускают перегрузку.</p>
+</div>
+<div id="-" class="section level2">
+<h2>7. Решение уравнений</h2>
+<p>Системы линейных уравнений. Функции для решения уравнений (roots, fzero).</p>
+</div>
+<div id="-.-----" class="section level2">
+<h2>8. Графические объекты. Работа с изображениями и видео</h2>
+<p>Иерархия типов данных. Иерархия графических объектов. Дескрипторная графика. Динамическое построение графиков.</p>
+<p>Изображение. Чтение и запись изображения. Множество Жюлиа и Мандельброта. Игра “Жизнь”.</p>
+<p>Работа с видео. Захват изображения. Воспроизведение и сохранение видео.</p>
 </div>
 <div id="-" class="section level2">
 <h2>9. Эффективное программирование</h2>
