Уточнено содержание лекции 6

--- a/план_курса.html
+++ b/план_курса.html
@@ -187,7 +187,7 @@ $(document).ready(function () {
 <h1 class="title toc-ignore">Компьютерная математика</h1>
 <h3 class="subtitle"><em>Описание и программа курса</em></h3>
 <h4 class="author"><em>Храмов Д.А.</em></h4>
-<h4 class="date"><em>16.02.2019</em></h4>
+<h4 class="date"><em>23.02.2019</em></h4>
 
 </div>
 
@@ -241,8 +241,11 @@ $(document).ready(function () {
 </div>
 <div id="--.--" class="section level2">
 <h2>6. Особенности компьютерной арифметики. Символьные расчеты</h2>
-<p>Символьный тип данных и символьные расчеты. Символьные расчеты. Математический Анализ: пределы, производные, интегралы, суммирование рядов и др. Преобразование выражений.</p>
-<p>Численное интегрирование и дифференцирование - если функции типа int допускают перегрузку.</p>
+<p>Математический объект и его Компьютерная реализация. Вещественные числа с плавающей точкой. Мантисса и порядок. Расстояние между соседними числами. Машинный эпсилон. Следствия использования чисел с плавающей точкой.</p>
+<p>Символьные расчеты. Создание символьных объектов. Решение уравнений и систем.</p>
+<p>Математический Анализ: пределы, производные, интегралы, суммирование рядов, разложение в ряд Тейлора.</p>
+<p>Арифметика заданной точности.</p>
+<p>Преобразование и упрощение выражений. Замена выражений. Системы компьютерной математики.</p>
 </div>
 <div id="-" class="section level2">
 <h2>7. Решение уравнений</h2>
