Добавление новой лекции.

--- a/план_курса.html
+++ b/план_курса.html
@@ -187,7 +187,7 @@ $(document).ready(function () {
 <h1 class="title toc-ignore">Компьютерная математика</h1>
 <h3 class="subtitle"><em>Описание и программа курса</em></h3>
 <h4 class="author"><em>Храмов Д.А.</em></h4>
-<h4 class="date"><em>23.02.2019</em></h4>
+<h4 class="date"><em>27.02.2019</em></h4>
 
 </div>
 
@@ -200,8 +200,9 @@ $(document).ready(function () {
 <li><a href="#-.--">5. Векторная алгебра. Трехмерная графика</a></li>
 <li><a href="#--.--">6. Особенности компьютерной арифметики. Символьные расчеты</a></li>
 <li><a href="#-">7. Решение уравнений</a></li>
-<li><a href="#-.-----">8. Графические объекты. Работа с изображениями и видео</a></li>
-<li><a href="#-">9. Эффективное программирование</a></li>
+<li><a href="#-">8. Исследование функций</a></li>
+<li><a href="#-.-----">9. Графические объекты. Работа с изображениями и видео</a></li>
+<li><a href="#-">10. Эффективное программирование</a></li>
 <li><a>Литература</a></li>
 </ul>
 </div>
@@ -249,16 +250,21 @@ $(document).ready(function () {
 </div>
 <div id="-" class="section level2">
 <h2>7. Решение уравнений</h2>
-<p>Системы линейных уравнений. Функции для решения уравнений (roots, fzero).</p>
+<p>Поиск корней полиномов (roots). Комплексные корни. Поиск действительных корней уравнений (fzero).</p>
+<p>Системы линейных уравнений. Графическая интерпретация решения. Число решений системы. Вырожденные случаи. Детерминант. Плохо обусловленные системы.</p>
+</div>
+<div id="-" class="section level2">
+<h2>8. Исследование функций</h2>
+<p>Поиск максимумов и минимумов функций. Точки перегиба.</p>
 </div>
 <div id="-.-----" class="section level2">
-<h2>8. Графические объекты. Работа с изображениями и видео</h2>
+<h2>9. Графические объекты. Работа с изображениями и видео</h2>
 <p>Иерархия типов данных. Иерархия графических объектов. Дескрипторная графика. Динамическое построение графиков.</p>
 <p>Изображение. Чтение и запись изображения. Множество Жюлиа и Мандельброта. Игра “Жизнь”.</p>
 <p>Работа с видео. Захват изображения. Воспроизведение и сохранение видео.</p>
 </div>
 <div id="-" class="section level2">
-<h2>9. Эффективное программирование</h2>
+<h2>10. Эффективное программирование</h2>
 <p>Типичные ошибки. Увеличение скорости или экономия памяти? Оценка быстродействия алгоритма.</p>
 </div>
 <div class="section level2">
