--- a/план_курса.html
+++ b/план_курса.html
@@ -187,7 +187,7 @@ $(document).ready(function () {
 <h1 class="title toc-ignore">Компьютерная математика</h1>
 <h3 class="subtitle"><em>Описание и программа курса</em></h3>
 <h4 class="author"><em>Храмов Д.А.</em></h4>
-<h4 class="date"><em>27.02.2019</em></h4>
+<h4 class="date"><em>03.03.2019</em></h4>
 
 </div>
 
@@ -200,7 +200,7 @@ $(document).ready(function () {
 <li><a href="#-.--">5. Векторная алгебра. Трехмерная графика</a></li>
 <li><a href="#--.--">6. Особенности компьютерной арифметики. Символьные расчеты</a></li>
 <li><a href="#-">7. Решение уравнений</a></li>
-<li><a href="#-">8. Исследование функций</a></li>
+<li><a href="#-.---">8. Исследование функций. Составные типы данных</a></li>
 <li><a href="#-.-----">9. Графические объекты. Работа с изображениями и видео</a></li>
 <li><a href="#-">10. Эффективное программирование</a></li>
 <li><a>Литература</a></li>
@@ -253,9 +253,10 @@ $(document).ready(function () {
 <p>Поиск корней полиномов (roots). Комплексные корни. Поиск действительных корней уравнений (fzero).</p>
 <p>Системы линейных уравнений. Графическая интерпретация решения. Число решений системы. Вырожденные случаи. Детерминант. Плохо обусловленные системы.</p>
 </div>
-<div id="-" class="section level2">
-<h2>8. Исследование функций</h2>
-<p>Поиск максимумов и минимумов функций. Точки перегиба.</p>
+<div id="-.---" class="section level2">
+<h2>8. Исследование функций. Составные типы данных</h2>
+<p>Построение асимптот. Поиск максимумов и минимумов. Точки перегиба.</p>
+<p>Таблица типов данных MATLAB. Структуры. Ячейки.</p>
 </div>
 <div id="-.-----" class="section level2">
 <h2>9. Графические объекты. Работа с изображениями и видео</h2>
