--- a/план_курса.html
+++ b/план_курса.html
@@ -187,7 +187,7 @@ $(document).ready(function () {
 <h1 class="title toc-ignore">Компьютерная математика</h1>
 <h3 class="subtitle"><em>Описание и программа курса</em></h3>
 <h4 class="author"><em>Храмов Д.А.</em></h4>
-<h4 class="date"><em>03.03.2019</em></h4>
+<h4 class="date"><em>09.03.2019</em></h4>
 
 </div>
 
@@ -201,8 +201,7 @@ $(document).ready(function () {
 <li><a href="#--.--">6. Особенности компьютерной арифметики. Символьные расчеты</a></li>
 <li><a href="#-">7. Решение уравнений</a></li>
 <li><a href="#-.---">8. Исследование функций. Составные типы данных</a></li>
-<li><a href="#-.-----">9. Графические объекты. Работа с изображениями и видео</a></li>
-<li><a href="#-">10. Эффективное программирование</a></li>
+<li><a href="#-.---">9. Графические объекты. Работа с изображениями</a></li>
 <li><a>Литература</a></li>
 </ul>
 </div>
@@ -258,22 +257,19 @@ $(document).ready(function () {
 <p>Построение асимптот. Поиск максимумов и минимумов. Точки перегиба.</p>
 <p>Таблица типов данных MATLAB. Структуры. Ячейки.</p>
 </div>
-<div id="-.-----" class="section level2">
-<h2>9. Графические объекты. Работа с изображениями и видео</h2>
-<p>Иерархия типов данных. Иерархия графических объектов. Дескрипторная графика. Динамическое построение графиков.</p>
-<p>Изображение. Чтение и запись изображения. Множество Жюлиа и Мандельброта. Игра “Жизнь”.</p>
-<p>Работа с видео. Захват изображения. Воспроизведение и сохранение видео.</p>
-</div>
-<div id="-" class="section level2">
-<h2>10. Эффективное программирование</h2>
-<p>Типичные ошибки. Увеличение скорости или экономия памяти? Оценка быстродействия алгоритма.</p>
+<div id="-.---" class="section level2">
+<h2>9. Графические объекты. Работа с изображениями</h2>
+<p>Иерархия графических классов. Конструкторы объектов. Указатели (дескрипторы) объектов. Управление свойствами объектов. Динамическое построение графиков. Запись видео.</p>
+<p>Изображения. Чтение и запись изображений. Информация об изображении.</p>
+<p>Фракталы. Множество Жюлиа. Одномерный клеточный автомат. Игра “Жизнь”.</p>
 </div>
 <div class="section level2">
 <h2>Литература</h2>
 <ol style="list-style-type: decimal">
 <li>Ануфриев И. Е., Смирнов А. Б., Смирнова Е. Н. MATLAB 7. - СПб.: БХВ-Петербург. 2005.</li>
 <li>Хант Б. и др. Matlab R2007 с нуля! - М.: Лучшие книги, 2008.</li>
-<li>MatLab. Язык технических вычислений. Вычисление, визуализация, программирование / Пер. с англ. Конюшенко В.В.</li>
+<li>MATLAB. Язык технических вычислений. Вычисление, визуализация, программирование / Пер. с англ. Конюшенко В.В.</li>
+<li><a href="http://www.csc.kth.se/utbildning/kth/kurser/DN2255/ndiff13/matopt.pdf">Pascal Getreuer. Writing Fast MATLAB Code</a></li>
 </ol>
 </div>
 
